# hash-rs

./: Cargo.toml  README.md  bytes-throughput.csv  bytes-time.csv  index.html  mapcountdense-throughput.csv  mapcountdense-time.csv  mapcountsparse-throughput.csv  mapcountsparse-time.csv
src/: main.rs  multiply_shift.rs
